sanitize geom_restore if the window gets quickly untiled after initially being maximized

BUG: 298646
REVIEW: 104715
FIXED-IN: 4.9